--- a/packages/elements/.eslintrc.json
+++ b/packages/elements/.eslintrc.json
@@ -5,10 +5,10 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@stencil-community/recommended"],
-      "plugins": ["eslint-plugin-no-null"],
+      "plugins": ["@typescript-eslint", "no-null"],
       // We set parserOptions.project for the project to allow TypeScript to create the type-checker behind the scenes when we run linting
       "parserOptions": {
-        "project": ["packages/elements/tsconfig.*?.json"]
+        "project": ["./tsconfig.json"]
       },
       "rules": {
         "@stencil-community/ban-exported-const-enums": "off",
