--- a/.github/workflows/deploy-prerelease.yml
+++ b/.github/workflows/deploy-prerelease.yml
@@ -39,8 +39,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Track master branch to make nx affected work
-        run: git branch --track main origin/master
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
@@ -55,9 +53,7 @@ jobs:
       - name: Set npm loglevel
         run: npm config set loglevel warn
       - name: Build libs
-        run: pnpm nx run-many -t build -p elements,elements-angular,elements-react,elements-vue
-        env:
-          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
+        run: pnpm run build --filter @inovex.de/elements-angular --filter @inovex.de/elements-react --filter @inovex.de/elements-vue
       - name: Version & Release
         shell: bash
         run: pnpm nx run workspace:publish:prerelease
