--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Track master branch to make nx affected work
-        run: |
-          git branch --track main origin/master
       - name: Install dependencies
         uses: ./.github/workflows/dependencies-install
 
@@ -34,10 +31,11 @@ jobs:
           key: playwright-browsers-${{ env.PLAYWRIGHT_VERSION }}
       - name: Setup Playwright
         if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
-        run: pnpm playwright install --with-deps
+        run: pnpm playwright install --with-deps chromium
 
       - name: Check format
         run: pnpm format
+
       - name: Check lint
         run: pnpm lint:ci
         env:
@@ -51,14 +49,12 @@ jobs:
       - name: Test all projects
         id: test_projects
         run: pnpm test
-        env:
-          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Upload playwright trace
         if: ${{ failure() && steps.test_projects.conclusion == 'failure' }}
         uses: actions/upload-artifact@v4
         with:
           name: playwright-traces
-          path: dist/.playwright/packages/storybook/test-output
+          path: packages/storybook/test-results
       - name: Upload build artifacts for canary release
         uses: ./.github/workflows/artifacts-upload
         with:
