--- a/package.json
+++ b/package.json
@@ -9,59 +9,29 @@
     "pnpm": ">=10.0.0"
   },
   "scripts": {
-    "start:storybook": "nx run-many --target=start --projects=storybook,elements --output-style=stream",
-    "start:landingpage": "nx run landingpage:start",
-    "start:ui-patterns-playground": "nx run-many --target=start --projects=ui-patterns,ui-patterns-playground --output-style=stream",
-    "build": "nx run-many --target=build --output-style=stream",
-    "test": "nx run-many --target=test --output-style=stream --configuration=ci",
-    "test:core:watch": "nx run elements:test:watch",
-    "lint": "nx affected --target=lint --output-style=stream",
-    "lint:fix": "nx affected --target=lint --configuration=fix --output-style=stream",
-    "lint:ci": "nx affected --target=lint --configuration=ci --output-style=stream",
-    "format": "nx format:check",
-    "format:fix": "nx format:write",
+    "start:storybook": "turbo start --filter=@inovex.de/elements-storybook --filter=@inovex.de/elements",
+    "start:landingpage": "turbo start --filter=@inovex.de/landingpage",
+    "start:ui-patterns-playground": "turbo start --filter=@inovex.de/ui-patterns --filter=@inovex.de/ui-patterns-playground",
+    "build": "turbo build",
+    "test": "turbo test",
+    "test:core:watch": "turbo run test:watch --filter=@inovex.de/elements",
+    "lint": "turbo lint",
+    "lint:fix": "turbo lint -- --fix",
+    "lint:ci": "turbo lint",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "qc": "pnpm lint:ci && pnpm format && pnpm build && pnpm test",
-    "clean": "nx run-many --target=clean && pnpm clean:nx && shx rm -rf node_modules .nx",
-    "clean:dist": "nx run-many --target=clean --configuration=dist && pnpm clean:nx",
-    "clean:node": "nx run-many --target=clean --configuration=node && pnpm clean:nx && shx rm -rf node_modules",
-    "clean:nx": "nx daemon --stop && nx reset"
-  },
-  "nx": {
-    "includedScripts": []
+    "clean": "turbo clean && shx rm -rf node_modules .turbo"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
-    "@angular-eslint/eslint-plugin": "~15.0.0",
-    "@angular-eslint/eslint-plugin-template": "~15.0.0",
-    "@angular-eslint/template-parser": "~15.0.0",
-    "@angular/cli": "~15.1.0",
-    "@angular/compiler-cli": "~15.1.0",
-    "@angular/language-service": "~15.1.0",
-    "@nx/angular": "18.0.7",
-    "@nx/devkit": "18.0.7",
-    "@nx/eslint": "18.0.7",
-    "@nx/eslint-plugin": "18.0.7",
-    "@nx/js": "18.0.7",
-    "@nx/playwright": "18.0.7",
-    "@nx/storybook": "18.0.7",
-    "@nx/vite": "18.0.7",
-    "@nx/web": "18.0.7",
-    "@playwright/test": "^1.56.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
     "@types/conventional-recommended-bump": "^9.0.3",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "29.5.11",
     "@types/node": "18.16.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
     "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/ui": "^1.3.1",
     "autoprefixer": "^10.4.16",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
@@ -83,41 +53,24 @@
     "jest-cli": "29.7.0",
     "js-yaml": "^3.14.0",
     "lint-staged": "^10.5.3",
-    "ng-packagr": "~15.1.0",
-    "nx": "18.0.7",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "prompts": "^2.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.55.0",
     "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
-    "svgo": "^2.8.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
+    "turbo": "^2.8.5",
     "typescript": "~5.3.2",
-    "vite": "~5.0.0",
     "vite-plugin-dts": "^3.6.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "vitest": "^1.3.1",
     "yalc": "^1.0.0-pre.32"
   },
   "dependencies": {
-    "@angular/animations": "~15.1.0",
-    "@angular/common": "~15.1.0",
-    "@angular/compiler": "~15.1.0",
-    "@angular/core": "~15.1.0",
-    "@angular/forms": "~15.1.0",
-    "@angular/platform-browser": "~15.1.0",
-    "@angular/platform-browser-dynamic": "~15.1.0",
-    "@angular/router": "~15.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "tslib": "^2.3.0"
   }
 }
