--- a/packages/elements-angular-example/package.json
+++ b/packages/elements-angular-example/package.json
@@ -2,7 +2,32 @@
   "name": "elements-angular-example",
   "version": "9.3.1",
   "private": true,
+  "scripts": {
+    "build": "ng build",
+    "start": "ng serve",
+    "lint": "eslint .",
+    "clean": "shx rm -rf dist"
+  },
   "dependencies": {
-    "@inovex.de/elements-angular": "workspace:*"
+    "@angular/animations": "~15.1.0",
+    "@angular/common": "~15.1.0",
+    "@angular/compiler": "~15.1.0",
+    "@angular/core": "~15.1.0",
+    "@angular/forms": "~15.1.0",
+    "@angular/platform-browser": "~15.1.0",
+    "@angular/platform-browser-dynamic": "~15.1.0",
+    "@angular/router": "~15.1.0",
+    "@inovex.de/elements-angular": "workspace:*",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~15.1.0",
+    "@angular-eslint/eslint-plugin": "~15.1.0",
+    "@angular-eslint/eslint-plugin-template": "~15.1.0",
+    "@angular-eslint/template-parser": "~15.1.0",
+    "@angular/cli": "~15.1.0",
+    "@angular/compiler-cli": "~15.1.0",
+    "typescript": "~4.9.5"
   }
 }
