--- a/packages/elements-angular-example/tsconfig.json
+++ b/packages/elements-angular-example/tsconfig.json
@@ -18,7 +18,7 @@
       "path": "./tsconfig.app.json"
     },
     {
-      "path": "./tsconfig.editor.json"
+      "path": "./tsconfig.spec.json"
     }
   ],
   "angularCompilerOptions": {
