--- a/packages/elements-react/package.json
+++ b/packages/elements-react/package.json
@@ -35,6 +35,9 @@
     "dist/",
     ".yalc"
   ],
+  "dependencies": {
+    "@inovex.de/elements": "workspace:*"
+  },
   "devDependencies": {
     "@types/node": "^14.17.0",
     "@types/react": "^18.2.24",
@@ -45,7 +48,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "dependencies": {
-    "@inovex.de/elements": "workspace:*"
+  "scripts": {
+    "build": "tsc --project ./tsconfig.lib.json",
+    "compile": "tsc --project ./tsconfig.lib.json",
+    "start": "tsc --project ./tsconfig.lib.json --watch",
+    "clean": "shx rm -rf dist"
   }
 }
