--- a/packages/storybook/.eslintrc.json
+++ b/packages/storybook/.eslintrc.json
@@ -1,14 +1,52 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*", "node_modules/*", "dist/*", "storybook-static"],
+  "ignorePatterns": ["!**/*", "node_modules/*", "dist/*", "storybook-static", "playwright.config.ts"],
   "overrides": [
     {
-      "files": ["src/**/*.{ts,js,tsx,jsx}"],
-      "extends": ["plugin:playwright/recommended", "plugin:storybook/recommended"],
+      "files": ["src/**/*.{ts,tsx}"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": ["./tsconfig.json"],
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+      },
+      "extends": ["plugin:storybook/recommended"],
+      "plugins": ["@typescript-eslint"],
       "rules": {
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off"
       }
+    },
+    {
+      "files": ["src/**/*.{js,jsx}"],
+      "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+      },
+      "extends": ["plugin:storybook/recommended"],
+      "rules": {
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
+      }
+    },
+    {
+      "files": ["src/**/*.spec.{ts,tsx}"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": ["./tsconfig.json"],
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+      },
+      "extends": ["plugin:playwright/recommended"],
+      "plugins": ["@typescript-eslint"]
+    },
+    {
+      "files": ["src/**/*.spec.{js,jsx}"],
+      "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+      },
+      "extends": ["plugin:playwright/recommended"]
     }
   ]
 }
