--- a/packages/ui-patterns/.eslintrc.json
+++ b/packages/ui-patterns/.eslintrc.json
@@ -8,7 +8,7 @@
       "plugins": ["react-refresh"],
       // We set parserOptions.project for the project to allow TypeScript to create the type-checker behind the scenes when we run linting
       "parserOptions": {
-        "project": ["packages/ui-patterns/tsconfig.json"]
+        "project": ["./tsconfig.json"]
       },
       "rules": {
         "react-refresh/only-export-components": [
