--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -22,9 +22,21 @@
     "dist",
     "package.json"
   ],
+  "scripts": {
+    "build": "vite build",
+    "start": "vite build --watch",
+    "lint": "eslint src",
+    "clean": "shx rm -rf dist"
+  },
   "peerDependencies": {
     "@inovex.de/elements-react": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "~5.0.0"
   }
 }
