--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": ".",
     "sourceMap": true,
     "declaration": true,
     "moduleResolution": "node",
@@ -9,6 +10,6 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "esnext",
-    "baseUrl": "./"
+    "lib": ["es2017", "dom"]
   }
 }
