--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -90,7 +90,7 @@
     "@material/textfield": "^13.0.0",
     "@material/theme": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@stencil/core": "4.12.6",
+    "@stencil/core": "4.20.0",
     "@tarekraafat/autocomplete.js": "^10.2.7",
     "@tiptap/core": "2.1.0",
     "@tiptap/extension-blockquote": "2.1.0",
@@ -127,6 +127,7 @@
     "@types/css-font-loading-module": "^0.0.6",
     "@types/prosemirror-markdown": "1.5.6",
     "@types/resize-observer-browser": "^0.1.7",
-    "puppeteer": "~21.8.0"
+    "puppeteer": "20",
+    "svgo": "^2.8.0"
   }
 }
