--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:landingpage": "turbo start --filter=@inovex.de/landingpage",
     "start:ui-patterns-playground": "turbo start --filter=@inovex.de/ui-patterns --filter=@inovex.de/ui-patterns-playground",
     "build": "turbo build",
-    "test": "turbo test",
+    "test": "turbo test --filter=@inovex.de/elements --filter=@inovex.de/elements-storybook",
     "test:core:watch": "turbo run test:watch --filter=@inovex.de/elements",
     "lint": "turbo lint",
     "lint:fix": "turbo lint -- --fix",
