--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,13 @@ jobs:
         with:
           name: playwright-traces
           path: packages/storybook/test-results
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v4
+        if: ${{ failure() && steps.test_projects.conclusion == 'failure' }}
+        with:
+          name: playwright-report
+          path: packages/storybook/playwright-report
+          retention-days: 30
       - name: Upload build artifacts for canary release
         uses: ./.github/workflows/artifacts-upload
         with:
