--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
     },
     "test": {
       "dependsOn": ["^build", "build"],
-      "outputs": []
+      "outputs": ["test-results/**", "playwright-report/**"]
     },
     "lint": {},
     "clean": {
