--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "qc": "pnpm lint:ci && pnpm format && pnpm build && pnpm test",
-    "clean": "turbo clean && shx rm -rf node_modules .turbo"
+    "clean": "turbo clean && shx rm -rf node_modules .turbo",
+    "changeset": "changeset",
+    "release-packages": "pnpm build && changeset publish",
+    "release-packages:canary": "pnpm build && changeset version --snapshot canary && changeset publish --tag canary",
+    "version-packages": "changeset version && pnpm install --lockfile-only"
   },
   "devDependencies": {
-    "@types/conventional-recommended-bump": "^9.0.3",
+    "@changesets/changelog-github": "^0.5.2",
+    "@changesets/cli": "^2.29.8",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "29.5.11",
@@ -35,8 +40,6 @@
     "autoprefixer": "^10.4.16",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
-    "conventional-changelog-angular": "^7.0.0",
-    "conventional-recommended-bump": "^9.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
@@ -59,7 +62,6 @@
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "prompts": "^2.4.0",
-    "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "tailwindcss": "^3.3.3",
