--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,5 +6,9 @@
   "linked": [],
   "access": "public",
   "baseBranch": "master",
+  "snapshot": {
+    "useCalculatedVersion": true,
+    "prereleaseTemplate": "{tag}-{commit}"
+  },
   "ignore": []
 }
